RESOLVED FIXED132344
Zombifying sweep should ignore retired blocks
https://bugs.webkit.org/show_bug.cgi?id=132344
Summary Zombifying sweep should ignore retired blocks
Mark Lam
Reported 2014-04-29 11:02:58 PDT
By definition, retired blocks do not have "dead" objects, or at least none that we know of yet until the next marking phase has been run over it. So, we should not be sweeping them (even for zombie mode).
Attachments
the patch. (3.02 KB, patch)
2014-04-29 11:16 PDT, Mark Lam
mhahnenberg: review+
Mark Lam
Comment 1 2014-04-29 11:16:43 PDT
Created attachment 230391 [details] the patch.
Mark Hahnenberg
Comment 2 2014-04-29 11:17:22 PDT
Comment on attachment 230391 [details] the patch. r=me
Mark Lam
Comment 3 2014-04-29 11:21:15 PDT
Geoffrey Garen
Comment 4 2014-04-29 11:25:17 PDT
Why did you do this? Does this fix a bug in zombie mode? Improve performance?
Mark Lam
Comment 5 2014-04-29 11:30:35 PDT
(In reply to comment #4) > Why did you do this? > > Does this fix a bug in zombie mode? Improve performance? This fixes a bug when running with zombie mode. This is needed because unlike the default sweeper that only sweeps after a full collection (which ensures there are no retired blocks during a sweep), the zombie sweep can happen with just an eden collection (and hence, retired blocks can exists, and we'll fail an assertion if we don't ignore them).
Note You need to log in before you can comment on or make changes to this bug.