Zombifying sweep should ignore retired blocks. <https://webkit.org/b/132344>

Reviewed by Mark Hahnenberg.

By definition, retired blocks do not have "dead" objects, or at least
none that we know of yet until the next marking phase has been run
over it.  So, we should not be sweeping them (even for zombie mode).

* heap/Heap.cpp:
(JSC::Heap::zombifyDeadObjects):
* heap/MarkedSpace.cpp:
(JSC::MarkedSpace::zombifySweep):
* heap/MarkedSpace.h:
(JSC::ZombifySweep::operator()):



Canonical link: https://commits.webkit.org/150356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167948 268f45cc-cd09-0410-ab3c-d52691b4dbfc