Source/JavaScriptCore/heap/Heap.cpp
@@ -1343,7 +1343,7 @@ void Heap::zombifyDeadObjects()
     {
         SamplingRegion samplingRegion("Garbage Collection: Sweeping");
         DelayedReleaseScope delayedReleaseScope(m_objectSpace);
-        m_objectSpace.sweep();
+        m_objectSpace.zombifySweep();
     }
     HeapIterationScope iterationScope(*this);
     m_objectSpace.forEachDeadCell<Zombify>(iterationScope);
